fixed overflow on mobile

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -22,6 +22,7 @@ html {
 
 body {
     font-size: $font-size;
+    overflow-x: hiiden;
 }
 
 section {
